# cargo-local-registry

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
src/: crates.rs  index.rs  lib.rs  main.rs  parsing.rs  types.rs
tests/: all.rs  basic.rs  server.rs
