[package]
name = "cargo-local-registry"
version = "0.2.9"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["cargo-subcommand"]
repository = "https://github.com/dhovart/cargo-local-registry"
homepage = "https://github.com/dhovart/cargo-local-registry"
description = """
A Cargo subcommand for managing local registries.
"""
edition = "2024"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[dependencies]
anyhow = "1.0.100"
cargo = "0.91.0"
cargo-platform = "0.3.1"
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
flate2 = "1.1.5"
openssl = { version = '0.10.75', optional = true }
rayon = "1.8.0"
serde = { version = "1.0.228", features = ['derive'] }
serde_json = "1.0.145"
tar = "0.4.26"
url = "2.5.6"

[dev-dependencies]
tempfile = "3.23.0"

[features]
vendored-openssl = ['openssl/vendored']
