[package]
name = "cargo-local-registry"
version = "0.2.9"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["cargo-subcommand"]
repository = "https://github.com/dhovart/cargo-local-registry"
homepage = "https://github.com/dhovart/cargo-local-registry"
description = """
A Cargo subcommand for managing local registries.
"""
edition = "2024"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[dependencies]
anyhow = "1.0.100"
cargo = "0.92.0"
cargo-platform = "0.3.1"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
flate2 = "1.1.5"
rayon = "1.8.0"
reqwest = { version = "0.12", features = ["blocking"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ['derive'] }
serde_json = "1.0.145"
tar = "0.4.26"
tempfile = "3.23.0"
url = "2.5.7"
openssl = { version = "0.10.75", optional = true }

[dev-dependencies]

[features]
vendored-openssl = ['openssl/vendored']

[badges]
maintenance = { status = "passively-maintained" }
