[package]
name = "cargo-local-registry"
version = "0.2.12"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["cargo-subcommand"]
repository = "https://github.com/dhovart/cargo-local-registry"
homepage = "https://github.com/dhovart/cargo-local-registry"
description = """
A Cargo subcommand for managing local registries.
"""
edition = "2024"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[dependencies]
anyhow = "1.0.102"
cargo = "0.95.0"
cargo-platform = "0.3.2"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.9"
flate2 = "1.1.9"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ['derive'] }
serde_json = "1.0.145"
tar = "0.4.45"
tempfile = "3.23.0"
url = "2.5.8"
openssl = { version = "0.10.79", optional = true }

[dev-dependencies]

[features]
vendored-openssl = ['openssl/vendored']

[badges]
maintenance = { status = "passively-maintained" }
